--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -24,3 +24,9 @@
     padding: 20px 20px;
     margin: 0;
 }
+
+@media(max-width:767px) {
+    .section__header {
+        grid-template-columns: 1fr;
+    }
+}
