--- a/src/Buttons/style.css
+++ b/src/Buttons/style.css
@@ -16,6 +16,7 @@
     margin: 0 0 0 20px;
     outline: none;
     transition: color .5s ease-out;
+    cursor: pointer;
 }
 
 .section__button:hover {
