--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -1,24 +1,30 @@
-.list__item {
+.tasks {
+    list-style: none;
+    padding: 20px 20px;
+    margin: 0;
+}
+
+.tasks__item {
     display: flex;
     padding: 10px 10px;
     align-items: center;
     border-bottom: 1px solid rgb(235, 235, 235);
 }
 
-.list__item--hidden {
+.tasks__item--hidden {
     display: none;
 }
 
-.list__span {
+.tasks__span {
     word-break: break-word;
     flex-grow: 1;
 }
 
-.list__span--done {
+.tasks__span--done {
     text-decoration-line: line-through;
 }
 
-.list__button {
+.tasks__button {
     height: 30px;
     width: 30px;
     margin: 0 10px;
@@ -29,26 +35,26 @@
     cursor: pointer;
 }
 
-.list__button--toggleDone {
+.tasks__button--toggleDone {
     background-color: rgb(0, 160, 0);
 }
 
-.list__button--toggleDone:hover {
+.tasks__button--toggleDone:hover {
     background-color: rgb(0, 200, 0);
 }
 
-.list__button--toggleDone:active {
+.tasks__button--toggleDone:active {
     background-color: rgb(0, 220, 0);
 }
 
-.list__button--remove {
+.tasks__button--remove {
     background-color: red;
 }
 
-.list__button--remove:hover {
+.tasks__button--remove:hover {
     background-color: rgb(252, 30, 30);
 }
 
-.list__button--remove:active {
+.tasks__button--remove:active {
     background-color: rgb(255, 60, 60);
 }
