--- a/src/Buttons/style.css
+++ b/src/Buttons/style.css
@@ -1,13 +1,13 @@
-.section__buttons {
+.buttons__buttons {
     display: flex;
     flex-wrap: wrap;
 }
 
-.section__buttons--hiddenButtons {
+.buttons__buttons--hiddenButtons {
     display: none;
 }
 
-.section__button {
+.buttons__button {
     background-color: transparent;
     color: teal;
     border: none;
@@ -17,19 +17,19 @@
     cursor: pointer;
 }
 
-.section__button:hover {
+.buttons__button:hover {
     color: rgb(0, 180, 180)
 }
 
-.section__button:disabled {
+.buttons__button:disabled {
     color: rgb(189, 189, 189);
 }
 
 @media(max-width:767px) {
-    .section__buttons {
+    .buttons__buttons {
         flex-wrap: wrap;
     }
-    .section__button {
+    .buttons__button {
         flex-basis: 100%;
         margin: 10px 0;
     }
