--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: "Montserrat", sans-serif;
   background-color: rgb(235, 235, 235);
 }
